fixed youtube size on mobile

--- a/app/styles/settings.scss
+++ b/app/styles/settings.scss
@@ -1,8 +1,25 @@
 @import "mixins";
 .settings {
+	
+	.profile {
+		margin-top: -20px;
+		padding-top: 20px;
+		padding-bottom: 20px;
+		background-image: url('../images/symphony.png');	
+	}
 	#profilePic{
 		width: 100px;
 		height: 100px;
 		@include roundimage(100px);
+
+	}
+	h1,h2{
+		font-weight: 300;
+	}
+	p{
+		font-size: 20px;
+	}
+	li{
+		font-size: 20px;
 	}
 }
